--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "numpickle"
 version = "0.1.2-5"
-description = "Save and load numeric pandas data frames as numpy array and pickle their row and column names and types info for performance reasons."
+description = "Faster loading of pandas data frames by saving them as numpy arrays and pickling their meta info (row+column names, column dtype info)."
 authors = ["Gwang-Jin Kim <gwang.jin.kim.phd@gmail.com>"]
 maintainers = ["Gwang-Jin Kim <gwang.jin.kim.phd@gmail.com>"]
 license = "MIT"
