--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [tool.poetry]
 name = "numpickle"
-version = "0.1.3-1"
+version = "0.1.3-2"
 description = "Faster loading of pandas data frames by saving them as numpy arrays and pickling their meta info (row+column names, column dtype info)."
 authors = ["Gwang-Jin Kim <gwang.jin.kim.phd@gmail.com>"]
 maintainers = ["Gwang-Jin Kim <gwang.jin.kim.phd@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/gwangjinkim/numpickle"
-documentation = ""
+documentation = "https://gwang-jin-kim.medium.com/faster-loading-and-saving-of-pandas-data-frames-using-numpickle-numpy-and-pickle-d15870519529"
 keywords = [
   "Excel",
   "Pandas",
